--- a/index.html
+++ b/index.html
@@ -7,57 +7,41 @@
     <meta name="keywords" content="autonomous robotics, computer science">
     <meta name="author" content="Kazuya Miyata">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kazuya's Website</title>
-    <style>
-        header {
-            border : 2px black;
-            border-radius: 8px;
-        }
 
-    </style>
+    <title>Kazuya's Website</title>
+
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/global.css">
     <link rel="icon" href="favicon.ico">
   </head>
 
   <body>
-    <header>
-      
+    <content-body>
       <h1>Kazuya Miyata's Portfolio</h1> 
-    </header>
-
-    <a href="media/Kazuya_Miyata_Resume_6.pdf">Resume</a>
-
-    <nav>
-      <ul>
-        <li><a href="pages/aboutme.html">About</a></li>
-        <li><a href="pages/projects.html">Projects</a></li>
-        <li><a href="pages/contact.html">Contact</a></li>
-        <li><a href="pages/experimenal.html">Experimental</a></li>
-      </ul>
-    </nav>
-
-
-    <footer>    
-      <hr>
-      <h3>My Links:</h3>
+      <a href="media/Kazuya_Miyata_Resume_6.pdf" class="resume">Resume</a>
       <nav>
-        <ul>
+        <a href="/pages/aboutme.html"><button class="main_button">About Me</button></a>
+        <a href="/pages/projects.html"><button class="main_button">Project</button></a>
+        <a href="/pages/contact.html"><button class="main_button">Contact</button></a>
+      </nav>
+    </content-body>
 
-         <li>
-           <a href="https://www.linkedin.com/in/kazmiyata/">
-            <img src="/media/icons8-linkedin.svg" alt="Linkedin" width="40" height="40">
-           </a>
-          </li>
-          <li>
-            <a href="https://github.com/miyatakazuya">
-             <img src="/media/icons8-github.svg" alt="Github" width="40" height="40">
-            </a>
-          </li>
-          <li>
-            <a href="mailto:kazuyamiyata18@gmail.com">
-             <img src="/media/Minduka-mail.svg" alt="Linkedin" width="40" height="40">
-            </a>
-          </li>
-        </ul>
+    <hr>
+    
+    <footer>    
+      <nav>
+
+        <a href="https://www.linkedin.com/in/kazmiyata/">
+          <img src="/media/icons8-linkedin.svg" alt="Linkedin" width="40" height="40">
+        </a>
+
+         <a href="https://github.com/miyatakazuya">
+          <img src="/media/icons8-github.svg" alt="Github" width="40" height="40">
+         </a>
+
+         <a href="mailto:kazuyamiyata18@gmail.com">
+          <img src="/media/Minduka-mail.svg" alt="Linkedin" width="40" height="40">
+         </a>
       </nav>
     </footer>
   </body>
