--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -27,7 +27,7 @@
         <picture>
           <source srcset="../images/kaz_portrait_updated.jpg" media="(min-width: 800px)" type="image/jpg">
           <img
-            src="../images/kaz_portrait_updated.jpg"
+            src="../images/headshot_small.png"
             width="1000"
             alt="Kazuya Miyata Portrait"
           >
