--- a/pages/projects.html
+++ b/pages/projects.html
@@ -29,13 +29,13 @@
       <section>
 
         <picture>
-          <source srcset="../media/IMG_6365.jpg" media="(max-width: 800px)" height="500">
-          <img src="../media/IMG_6365.jpg" alt="p1_pic" height="500" width="800">
+          <source srcset="../images/toothless.jpg" media="(min-width: 800px)" type="image/jpg">
+          <img
+            src="../images/toothless_small.png"
+            width="1000"
+            alt="Kazuya Miyata Portrait"
+          >
         </picture>
-        <!-- <figure>
-          <img src="../media/IMG_6365.jpg" alt="p1_pic" height="500" width="800">
-          <figcaption>The Triton UAS Plane - Nickname "Stickbug"</figcaption>
-        </figure> -->
   
         <p>
           As a software lead for Triton UAS, I designed and programmed autonomous flight systems.
@@ -52,9 +52,14 @@
 
       <section>
 
+
         <picture>
-          <source srcset="../media/PXL_20220728_213644339.MP.jpg" media="(max-width: 800px)" height="500">
-          <img src="../media/PXL_20220728_213644339.MP.jpg" alt="p2_pic" height="300" width="300">
+          <source srcset="../images/istari.jpg" media="(min-width: 800px)" type="image/jpg" width="1000">
+          <img
+            src="../images/istari.jpg"
+            width="1000"
+            alt="Kazuya Miyata Portrait"
+          >
         </picture>
   
         <p>
